--- a/app/src/main/res/drawable/bottom_border_2.xml
+++ b/app/src/main/res/drawable/bottom_border_2.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:bottom="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/group_detail_bg" />
+            <solid android:color="@color/activity_bg_1" />
         </shape>
     </item>
 </layer-list>
