--- a/app/src/main/res/drawable/top_border.xml
+++ b/app/src/main/res/drawable/top_border.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:top="5dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/group_detail_bg" />
+            <solid android:color="@color/activity_bg_1" />
         </shape>
     </item>
 </layer-list>
