--- a/app/src/main/res/layout/activity_group_creator.xml
+++ b/app/src/main/res/layout/activity_group_creator.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/activity_bg_1"
         android:orientation="vertical"
         android:paddingBottom="10dp">
 
@@ -20,7 +20,7 @@
             android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
             android:text="Create Group"
-            android:textColor="#fff"
+            android:textColor="@color/white"
             android:textSize="26sp"
             android:textStyle="bold" />
 
@@ -32,10 +32,11 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="70dp"
-            android:background="#fff"
+            android:background="@drawable/rounded_corner"
             android:elevation="4dp"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:padding="20dp"
+            >
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -117,7 +118,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="0.2"
-                        android:background="@color/profile_save_button"
+                        android:background="@color/main_theme_1"
                         android:scaleType="fitCenter"
                         android:src="@drawable/ic_add_contact" />
                 </LinearLayout>
@@ -144,7 +145,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="22dp"
                     android:background="@drawable/button_shape"
-                    android:backgroundTint="@color/profile_save_button"
+                    android:backgroundTint="@color/main_theme_1"
                     android:text="Create Group"
                     android:textAllCaps="false"
                     android:textColor="#fff"
