--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/group_detail_bg">
+    android:background="@color/activity_bg_1">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                         android:textSize="25sp"
                         android:layout_gravity="center"
                         android:textStyle="bold"
-                        android:textColor="@color/login_btn"
+                        android:textColor="@color/main_theme_1"
                         />
 
                 </LinearLayout>
@@ -100,7 +100,7 @@
                             <android.support.v7.widget.AppCompatEditText
                                 android:id="@+id/edit_prof_name"
                                 android:layout_width="0dp"
-                                android:layout_height="wrap_content"
+                                android:layout_height="48dp"
                                 android:layout_weight="1"
                                 android:layout_gravity="center_vertical"
                                 android:background="@drawable/bottom_border_white"
@@ -112,10 +112,9 @@
                                 android:layout_width="48dp"
                                 android:layout_height="48dp"
                                 android:layout_gravity="center_vertical"
+                                android:background="@color/main_theme_1"
                                 android:scaleType="center"
-                                android:src="@android:drawable/ic_menu_edit"
-                                android:background="@color/login_btn"
-                                />
+                                android:src="@android:drawable/ic_menu_edit" />
 
                         </LinearLayout>
 
@@ -128,6 +127,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/textView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Profile Status:"
@@ -147,7 +147,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
-                    android:background="@color/login_btn" />
+                    android:background="@color/main_theme_1" />
 
             </LinearLayout>
 
@@ -196,7 +196,7 @@
                       android:textSize="25sp"
                       android:layout_gravity="center"
                       android:textStyle="bold"
-                      android:textColor="@color/login_btn"
+                      android:textColor="@color/main_theme_1"
                       />
               </LinearLayout>
 
@@ -226,7 +226,7 @@
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
-                   android:background="@color/login_btn" />
+                   android:background="@color/main_theme_1" />
 
            </LinearLayout>
 
@@ -275,7 +275,7 @@
                         android:textSize="25sp"
                         android:layout_gravity="center"
                         android:textStyle="bold"
-                        android:textColor="@color/login_btn"
+                        android:textColor="@color/main_theme_1"
                         />
 
                 </LinearLayout>
@@ -306,7 +306,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
-                    android:background="@color/login_btn" />
+                    android:background="@color/main_theme_1" />
 
             </LinearLayout>
 
@@ -319,7 +319,7 @@
             android:layout_height="wrap_content"
             android:text="@string/save_btn"
             android:textColor="@color/white"
-            android:background="@color/login_btn"/>
+            android:background="@color/main_theme_1"/>
 
     </LinearLayout>
 </RelativeLayout>
