--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,12 +18,13 @@
     <color name="profile_camera_button">#f17110</color>
     <color name="profile_save_button">#224488</color>
     <color name="system_msg_color">#cbeff7</color>
-    <color name="group_detail_bg">#394263</color>
     <color name="group_detail_tint">#635fc6dc</color>
 
     <color name="button_color">#3f94df</color>
     <color name="notification_bck">#dcd9d9</color>
 
-    <color name="login_btn">#6fd5b6</color>
+    <color name="activity_bg_1">#394263</color>
+    <color name="main_theme_1">#6fd5b6</color>
+    <color name="main_theme_2">#74cca9</color>
 
 </resources>
