GroupDetail Activity in progress again

--- a/app/src/main/res/menu/chat_detail_menu.xml
+++ b/app/src/main/res/menu/chat_detail_menu.xml
@@ -26,6 +26,7 @@
         android:orderInCategory="200"
         android:title="Save"
         app:showAsAction="always"
+        android:visible="false"
         />
 
 </menu>
