--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -3,5 +3,5 @@
     <corners
         android:radius="15dp"/>
     <solid
-        android:color="@color/button_color"
+        android:color="@color/main_theme_1"
         /> </shape>
