--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" android:padding="10dp">
     <stroke
         android:width="1dp"
-        android:color="@color/black" />
+        android:color="@color/white" />
     <solid android:color="#FFFFFF"/>
     <corners
         android:bottomRightRadius="20dp"
