--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/chat_background"
     tools:context="com.example.naziur.androidchat.activities.ChatActivity">
 
     <ListView
         android:id="@+id/chattingList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         android:divider="@null"
         android:dividerHeight="0dip"
         android:layout_above="@+id/footer_section"
@@ -21,18 +21,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:padding="3dp"
-        >
+        android:padding="3dp">
+
         <LinearLayout
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/rounded_corner"
+            android:background="@drawable/rounded_shadow"
             android:focusable="true"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="2dp">
             <requestFocus />
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -66,7 +67,7 @@
             android:layout_marginTop="5dp"
             android:layout_gravity="top"
             android:id="@+id/send_button"
-            android:layout_width="35dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_action_send"
             android:layout_marginLeft="2dp"
