--- a/app/src/main/res/layout/activity_my_contacts.xml
+++ b/app/src/main/res/layout/activity_my_contacts.xml
@@ -12,14 +12,11 @@
         android:layout_height="match_parent"
         />
 
-    <TextView
-        android:id="@+id/empty_contacts"
+    <include
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No Contacts"
-        android:textSize="25sp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        layout="@layout/empty_layout"
+        android:layout_centerInParent="true"
         />
 
     <android.support.design.widget.FloatingActionButton
