--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -1,82 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<android.support.v7.widget.CardView android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    android:paddingLeft="5dp"
-    >
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/prof_pic"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginRight="2dp"
-        android:layout_marginEnd="2dp"
-        android:src="@drawable/placeholder"
-        android:layout_centerVertical="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        />
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_toRightOf="@+id/prof_pic"
-        android:layout_toEndOf="@+id/prof_pic"
-        >
+    android:elevation="4dp"
+    app:cardUseCompatPadding="true">
 
     <LinearLayout
-        android:id="@+id/linear2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        android:padding="5dp"
-        android:gravity="center">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:orientation="horizontal"
+        >
 
-        <TextView
-            android:id="@+id/dateTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Today"
-            android:textAllCaps="true"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/prof_pic"
+            android:layout_width="55dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="2dp"
+            android:layout_marginEnd="2dp"
+            android:src="@drawable/placeholder"
+            android:layout_centerVertical="true"
+            android:background="?attr/selectableItemBackgroundBorderless"
             />
 
-        <Button
-            android:id="@+id/add_contact_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@drawable/button_shape"
-            android:drawableStart="@drawable/ic_friend"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
-            android:drawableLeft="@drawable/ic_friend"
-            android:layout_margin="3dp"/>
-
-    </LinearLayout>
-
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="0.6"
             android:orientation="vertical"
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@id/linear2"
             android:id="@+id/linear"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_alignParentLeft="true">
+            android:layout_marginBottom="5dp">
 
             <TextView
                 android:id="@+id/prof_name"
@@ -110,20 +71,60 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:text="Last Message"/>
+                    android:text="Last message..."
+                    android:scrollHorizontally="false"/>
 
             </LinearLayout>
 
         </LinearLayout>
 
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@id/linear"
-            android:background="@color/itemDividerColor"
-            android:layout_marginTop="4dp"/>
 
-    </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/linear2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
+            android:orientation="vertical"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:padding="5dp"
+            android:gravity="end">
 
-</RelativeLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/dateTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="29/09/2018"
+                    android:textAllCaps="true"
+                    />
+
+                <Button
+                    android:id="@+id/add_contact_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:background="@drawable/button_shape"
+                    android:drawableStart="@drawable/ic_friend"
+                    android:paddingLeft="25dp"
+                    android:paddingRight="25dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="15sp"
+                    android:drawableLeft="@drawable/ic_friend"
+                    android:layout_margin="3dp"
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+</android.support.v7.widget.CardView>
