--- a/app/src/main/res/layout/my_message_cell.xml
+++ b/app/src/main/res/layout/my_message_cell.xml
@@ -46,12 +46,13 @@
                 android:textColor="@color/messageTextColor"
                 android:textSize="18sp"
                 android:typeface="sans"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/dateTime"
@@ -66,7 +67,8 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="5dp"
                     android:layout_marginRight="5dp"
-                    />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp" />
 
                 <ImageView
                     android:id="@+id/receive_status"
