--- a/app/src/main/res/layout/receiving_image_message_cell.xml
+++ b/app/src/main/res/layout/receiving_image_message_cell.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:padding="10dp">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,8 +74,10 @@
                 android:shadowDy="1.3"
                 android:shadowRadius="1.6"
                 android:text="Bob"
+                android:textSize="16sp"
                 android:textColor="@color/timeTextColor"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                />
 
         </RelativeLayout>
 
