--- a/app/src/main/res/layout/receiving_message_cell.xml
+++ b/app/src/main/res/layout/receiving_message_cell.xml
@@ -4,12 +4,10 @@
     android:layout_width="match_parent"
     android:padding="10dp">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/date_seperator"
@@ -25,8 +23,7 @@
             android:paddingRight="10dp"
             android:layout_margin="5dp"
             android:layout_gravity="center"
-            android:visibility="gone"
-            />
+            android:visibility="gone" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -48,9 +45,10 @@
                 android:text="Bobby"
                 android:textColor="@color/messageTextColor"
                 android:textStyle="bold"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:layout_marginTop="5dp"
-                android:visibility="gone"/>
+
+                />
 
             <TextView
                 android:id="@+id/wishMessage"
@@ -61,6 +59,8 @@
                 android:textSize="18sp"
                 android:typeface="sans"
                 android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_below="@+id/sender_id"
                 />
 
@@ -76,6 +76,8 @@
                 android:shadowRadius="1.6"
                 android:layout_marginBottom="7dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_below="@+id/wishMessage"/>
 
         </RelativeLayout>
