Fixed class cast exception with SettingsActivity

--- a/app/src/main/res/xml/pref_account.xml
+++ b/app/src/main/res/xml/pref_account.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <SwitchPreference
-        android:defaultValue="true"
+        android:defaultValue="@string/boolean_true"
         android:key="auto_login_user"
         android:summary="@string/pref_desc_auto_login"
         android:title="@string/pref_title_auto_login" />
