--- a/app/src/main/res/layout/activity_group_creator.xml
+++ b/app/src/main/res/layout/activity_group_creator.xml
@@ -22,7 +22,8 @@
             android:text="Create Group"
             android:textColor="@color/white"
             android:textSize="26sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            />
 
         <RelativeLayout
             android:id="@+id/form_container"
@@ -32,8 +33,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="70dp"
-            android:background="@color/white"
-            android:elevation="4dp"
+            android:background="@drawable/rounded_corner"
+            android:elevation="8dp"
             android:orientation="vertical"
             android:padding="20dp"
             >
@@ -54,6 +55,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:drawableLeft="@drawable/ic_title"
+                        android:drawableTint="@color/main_theme_1"
                         android:hint="Group Name"
                         android:inputType="textEmailAddress"
                         android:maxLines="1" />
@@ -105,7 +107,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@android:drawable/ic_menu_search"
-                            android:drawableTint="@color/profile_save_button"
+                            android:drawableTint="@color/main_theme_1"
                             android:hint="Enter Username"
                             android:inputType="textEmailAddress"
                             android:maxLines="1" />
@@ -118,8 +120,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="0.2"
-                        android:background="@color/profile_save_button"
+                        android:background="@color/main_theme_1"
                         android:scaleType="fitCenter"
+                        android:elevation="8dp"
                         android:src="@drawable/ic_add_contact" />
                 </LinearLayout>
 
@@ -144,8 +147,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="22dp"
-                    android:background="@drawable/button_shape"
-                    android:backgroundTint="@color/profile_save_button"
+                    android:background="@color/main_theme_1"
                     android:text="Create Group"
                     android:textAllCaps="false"
                     android:textColor="#fff"
@@ -162,7 +164,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginTop="16dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:elevation="4dp"
+            android:elevation="8dp"
             android:src="@drawable/ic_group_unknown" />
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -172,7 +174,7 @@
             android:layout_gravity="center_vertical"
             android:background="@drawable/header_icon_round"
             android:src="@android:drawable/ic_popup_sync"
-            android:elevation="4dp"
+            android:elevation="8dp"
             android:layout_alignBottom="@id/group_photo"
             android:layout_alignLeft="@id/group_photo"
             android:layout_alignStart="@id/group_photo"
