Inital setup for about section settings page to be done

--- a/app/src/main/res/xml/pref_my_headers.xml
+++ b/app/src/main/res/xml/pref_my_headers.xml
@@ -8,7 +8,7 @@
         android:title="@string/pref_header_account" />
 
     <header
-        android:fragment="com.example.naziur.androidchat.activities.SettingsActivity$AccountPreferenceFragment"
+        android:fragment="com.example.naziur.androidchat.activities.SettingsActivity$AboutPreferenceFragment"
         android:icon="@drawable/ic_empty"
         android:title="@string/pref_header_about" />
 
